Another big batch of assimilation changes for test

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -508,6 +508,10 @@
 
 	WHAT_IS_BELOW_IS_NOT_HAPPENING:0 "WHAT IS IN SCRIPT IS NOT HAPPENING"
 
+	living_standard_tec_assimilation_test:0 "TEST"
+	living_standard_tec_assimilation_test_tooltip:0 "TEST TOOLTIP"
+	living_standard_tec_assimilation_test_tooltip_delayed:0 "TEST TOOLTIP DELAYED"
+
 	living_standard_tec_assimilation_remove_hivemind:0 "$living_standard_deassimilation$"
 	living_standard_tec_assimilation_remove_hivemind_tooltip:0 "$living_standard_deassimilation_tooltip$"
 	living_standard_tec_assimilation_remove_hivemind_tooltip_delayed:0 "§LThe sense of individuality may be extremely painful for creatures biologically evolved to be part of a collective, but the experience will be only temporary, as an universe of self-thoughts awaits.§!"
@@ -532,33 +536,49 @@
 	living_standard_tec_assimilation_cybernetic_t1_tooltip:0 "This organic species is being improved with §ECybernetic§! implants."
 	living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed:0 "§LSolider. Improved. Speedier. Forcefuller.§!"
 
-	living_standard_tec_assimilation_cybernetic_t1_gestalt:0 "$living_standard_tec_assimilation_cybernetic_t1$"
-	living_standard_tec_assimilation_cybernetic_t1_gestalt_tooltip:0 "This organic species is being integrated within the collective with mandatory §ECybernetic§! implants."
-	living_standard_tec_assimilation_cybernetic_t1_gestalt_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
+	living_standard_tec_assimilation_cybernetic_t1_machine:0 "$living_standard_tec_assimilation_cybernetic_t1$"
+	living_standard_tec_assimilation_cybernetic_t1_machine_tooltip:0 "This organic species is being integrated within the collective with mandatory §ECybernetic§! implants."
+	living_standard_tec_assimilation_cybernetic_t1_machine_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
+
+	living_standard_tec_assimilation_cybernetic_t1_hive:0 "$living_standard_tec_assimilation_cybernetic_t1$"
+	living_standard_tec_assimilation_cybernetic_t1_hive_tooltip:0 "This organic species is being integrated within the collective with mandatory §ECybernetic§! implants."
+	living_standard_tec_assimilation_cybernetic_t1_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cybernetic_t1_upgrade:0 "Cybernetic Upgrade"
 	living_standard_tec_assimilation_cybernetic_t1_upgrade_tooltip:0 "This species is getting its §ECybernetic§! implants upgraded."
 	living_standard_tec_assimilation_cybernetic_t1_upgrade_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
 
-	living_standard_tec_assimilation_cybernetic_t1_upgrade_gestalt:0 "$living_standard_tec_assimilation_cybernetic_t1_upgrade$"
-	living_standard_tec_assimilation_cybernetic_t1_upgrade_gestalt_tooltip:0 "$living_standard_tec_assimilation_cybernetic_t1_upgrade_tooltip$"
-	living_standard_tec_assimilation_cybernetic_t1_upgrade_gestalt_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
+	living_standard_tec_assimilation_cybernetic_t1_upgrade_machine:0 "$living_standard_tec_assimilation_cybernetic_t1_upgrade$"
+	living_standard_tec_assimilation_cybernetic_t1_upgrade_machine_tooltip:0 "$living_standard_tec_assimilation_cybernetic_t1_upgrade_tooltip$"
+	living_standard_tec_assimilation_cybernetic_t1_upgrade_machine_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
+
+	living_standard_tec_assimilation_cybernetic_t1_upgrade_hive:0 "$living_standard_tec_assimilation_cybernetic_t1_upgrade$"
+	living_standard_tec_assimilation_cybernetic_t1_upgrade_hive_tooltip:0 "$living_standard_tec_assimilation_cybernetic_t1_upgrade_tooltip$"
+	living_standard_tec_assimilation_cybernetic_t1_upgrade_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t1_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cybernetic_t2:0 "Ulterior Integration"
 	living_standard_tec_assimilation_cybernetic_t2_tooltip:0 "This organic species is being augmented with §EAdvanced Cybernetics§!."
 	living_standard_tec_assimilation_cybernetic_t2_tooltip_delayed:0 "§LDefinitive augmentations on perfected bodies, improved efficiency and determination over natural failure and randomness.§!"
 
-	living_standard_tec_assimilation_cybernetic_t2_gestalt:0 "$living_standard_tec_assimilation_cybernetic_t2$"
-	living_standard_tec_assimilation_cybernetic_t2_gestalt_tooltip:0 "This organic species is being integrated in the collective with §EAdvanced Cybernetics§!."
-	living_standard_tec_assimilation_cybernetic_t2_gestalt_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_tooltip_delayed$"
+	living_standard_tec_assimilation_cybernetic_t2_machine:0 "$living_standard_tec_assimilation_cybernetic_t2$"
+	living_standard_tec_assimilation_cybernetic_t2_machine_tooltip:0 "This organic species is being integrated in the collective with §EAdvanced Cybernetics§!."
+	living_standard_tec_assimilation_cybernetic_t2_machine_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_tooltip_delayed$"
+
+	living_standard_tec_assimilation_cybernetic_t2_hive:0 "$living_standard_tec_assimilation_cybernetic_t2$"
+	living_standard_tec_assimilation_cybernetic_t2_hive_tooltip:0 "This organic species is being integrated in the collective with §EAdvanced Cybernetics§!."
+	living_standard_tec_assimilation_cybernetic_t2_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cybernetic_t2_upgrade:0 "Ulterior Upgrade"
 	living_standard_tec_assimilation_cybernetic_t2_upgrade_tooltip:0 "This organic species is getting its §ECybernetic§! implants augmented towards §EAdvanced Cybernetics§!."
 	living_standard_tec_assimilation_cybernetic_t2_upgrade_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_tooltip_delayed$"
 
-	living_standard_tec_assimilation_cybernetic_t2_upgrade_gestalt:0 "$living_standard_tec_assimilation_cybernetic_t2_upgrade$"
-	living_standard_tec_assimilation_cybernetic_t2_upgrade_gestalt_tooltip:0 "$living_standard_tec_assimilation_cybernetic_t2_upgrade_tooltip_delayed$"
-	living_standard_tec_assimilation_cybernetic_t2_upgrade_gestalt_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_upgrade_tooltip_delayed$"
+	living_standard_tec_assimilation_cybernetic_t2_upgrade_machine:0 "$living_standard_tec_assimilation_cybernetic_t2_upgrade$"
+	living_standard_tec_assimilation_cybernetic_t2_upgrade_machine_tooltip:0 "$living_standard_tec_assimilation_cybernetic_t2_upgrade_tooltip_delayed$"
+	living_standard_tec_assimilation_cybernetic_t2_upgrade_machine_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_upgrade_tooltip_delayed$"
+
+	living_standard_tec_assimilation_cybernetic_t2_upgrade_hive:0 "$living_standard_tec_assimilation_cybernetic_t2_upgrade$"
+	living_standard_tec_assimilation_cybernetic_t2_upgrade_hive_tooltip:0 "$living_standard_tec_assimilation_cybernetic_t2_upgrade_tooltip_delayed$"
+	living_standard_tec_assimilation_cybernetic_t2_upgrade_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_cybernetic_t2_upgrade_tooltip_delayed$"
 
 	living_standard_tec_assimilation_cybernetic_t2_total:0 "Composition Rearrangement"
 	living_standard_tec_assimilation_cybernetic_t2_total_tooltip:0 "This species is being reshaped into new §E[From.GetSpeciesNamePlural]§!."
@@ -600,6 +620,10 @@
 	living_standard_tec_assimilation_genetic_add_tooltip:0 "This organic species is getting §HGenetically Perfected§!."
 	living_standard_tec_assimilation_genetic_add_tooltip_delayed:0 "$living_standard_tec_assimilation_genetic_total_tooltip_delayed$"
 
+	living_standard_tec_assimilation_genetic_add_hive:0 "Genetic Perfection"
+	living_standard_tec_assimilation_genetic_add_hive_tooltip:0 "This organic species is getting §HGenetically Perfected§!."
+	living_standard_tec_assimilation_genetic_add_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_genetic_total_tooltip_delayed$"
+
 	living_standard_tec_assimilation_biopsionic_total:0 "Integrate Purification"
 	living_standard_tec_assimilation_biopsionic_total_tooltip:0 "This organic species is being reshaped into new §E[From.GetSpeciesNamePlural]§!."
 	living_standard_tec_assimilation_biopsionic_total_tooltip_delayed:0 "§LBody and soul tailored together to resemble the purest of all forms, us.§!"
@@ -608,13 +632,25 @@
 	living_standard_tec_assimilation_biopsionic_add_tooltip:0 "This organic species is getting §HPurified§! both psionic and biologically."
 	living_standard_tec_assimilation_biopsionic_add_tooltip_delayed:0 "§LBody and soul tailored together to reach truly purity.§!"
 
+	living_standard_tec_assimilation_biopsionic_add_hive:0 "Merciful Purification"
+	living_standard_tec_assimilation_biopsionic_add_hive_tooltip:0 "This organic species is getting §HPurified§! both psionic and biologically."
+	living_standard_tec_assimilation_biopsionic_add_hive_tooltip_delayed:0 "§LBody and soul tailored together to reach truly purity.§!"
+
 	living_standard_tec_assimilation_cyberpsionic:0 "Imbued Augmentation"
 	living_standard_tec_assimilation_cyberpsionic_tooltip:0 "This organic species is getting augmented with §PInfused Cybernetics§!."
 	living_standard_tec_assimilation_cyberpsionic_tooltip_delayed:0 "§LOur technological advancements will surely improve the way we understand the universe, and so this species will also be augmented.§!"
 
+	living_standard_tec_assimilation_cyberpsionic_hive:0 "Imbued Augmentation"
+	living_standard_tec_assimilation_cyberpsionic_hive_tooltip:0 "This organic species is getting augmented with §PInfused Cybernetics§!."
+	living_standard_tec_assimilation_cyberpsionic_hive_tooltip_delayed:0 "§LOur technological advancements will surely improve the way we understand the universe, and so this species will also be augmented.§!"
+
 	living_standard_tec_assimilation_cyberpsionic_upgrade:0 "Imbued Upgrade"
 	living_standard_tec_assimilation_cyberpsionic_upgrade_tooltip:0 "This organic species is getting its §ECybernetic§! implants augmented towards §PInfused Cybernetics§!."
 	living_standard_tec_assimilation_cyberpsionic_upgrade_tooltip_delayed:0 "$living_standard_tec_assimilation_cyberpsionic_tooltip_delayed$"
+
+	living_standard_tec_assimilation_cyberpsionic_upgrade_hive:0 "Imbued Upgrade"
+	living_standard_tec_assimilation_cyberpsionic_upgrade_hive_tooltip:0 "This organic species is getting its §ECybernetic§! implants augmented towards §PInfused Cybernetics§!."
+	living_standard_tec_assimilation_cyberpsionic_upgrade_hive_tooltip_delayed:0 "$living_standard_tec_assimilation_cyberpsionic_tooltip_delayed$"
 
 	living_standard_tec_assimilation_replicant_total:0 "Biomechanical Transubstantiation"
 	living_standard_tec_assimilation_replicant_total_tooltip:0 "This species is being reshaped into new §E[From.GetSpeciesNamePlural]§!."
@@ -624,9 +660,21 @@
 	living_standard_tec_assimilation_replicant_add_tooltip:0 "This species is being upgraded into new §GReplicants§!."
 	living_standard_tec_assimilation_replicant_add_tooltip_delayed:0 "§LObsolete forms require proper treatment, a synthesis of all worlds suit better a dynamic and evolving universe. They need to be upgraded, and so they will understand.§!"
 
+	living_standard_tec_assimilation_replicant_add_hive:0 "Biomechanical Upgrade"
+	living_standard_tec_assimilation_replicant_add_hive_tooltip:0 "This species is being upgraded into new §GReplicants§!."
+	living_standard_tec_assimilation_replicant_add_hive_tooltip_delayed:0 "§LObsolete forms require proper treatment, a synthesis of all worlds suit better a dynamic and evolving universe. They need to be upgraded, and so they will understand.§!"
+
 	living_standard_tec_assimilation_biological_total:0 "Biomatter Reshaping"
 	living_standard_tec_assimilation_biological_total_tooltip:0 "This organic species is being reshaped into new §E[From.GetSpeciesNamePlural]§!."
 	living_standard_tec_assimilation_biological_total_tooltip_delayed:0 "§LThese inferior lifeforms will now be adapted to our very biogenetic structure, wether they want or not.§!"
+
+	living_standard_tec_assimilation_biological_add:0 "Biomatter Incorporation"
+	living_standard_tec_assimilation_biological_add_tooltip:0 "TO DO."
+	living_standard_tec_assimilation_biological_add_tooltip_delayed:0 "TO DO"
+
+	living_standard_tec_assimilation_biological_add_hive:0 "Biomatter Incorporation"
+	living_standard_tec_assimilation_biological_add_hive_tooltip:0 "TO DO."
+	living_standard_tec_assimilation_biological_add_hive_tooltip_delayed:0 "TO DO"
 
 	living_standard_tec_assimilation_biological_decompose:0 "Biomatter Recycling"
 	living_standard_tec_assimilation_biological_decompose_tooltip:0 "This species is being decomposed into basic $tec_loc_xenocytes$ for later use."
@@ -648,17 +696,25 @@
 	living_standard_tec_assimilation_bionic_tooltip:0 "REPLACE_ME"
 	living_standard_tec_assimilation_bionic_tooltip_delayed:0 "REPLACE_ME"
 
-	living_standard_tec_assimilation_bionic_gestalt:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_gestalt_tooltip:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_gestalt_tooltip_delayed:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_machine:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_machine_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_machine_tooltip_delayed:0 "REPLACE_ME"
+
+	living_standard_tec_assimilation_bionic_hive:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_hive_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_hive_tooltip_delayed:0 "REPLACE_ME"
 
 	living_standard_tec_assimilation_bionic_upgrade:0 "REPLACE_ME"
 	living_standard_tec_assimilation_bionic_upgrade_tooltip:0 "REPLACE_ME"
 	living_standard_tec_assimilation_bionic_upgrade_tooltip_delayed:0 "REPLACE_ME"
 
-	living_standard_tec_assimilation_bionic_upgrade_gestalt:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_upgrade_gestalt_tooltip:0 "REPLACE_ME"
-	living_standard_tec_assimilation_bionic_upgrade_gestalt_tooltip_delayed:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_upgrade_machine:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_upgrade_machine_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_upgrade_machine_tooltip_delayed:0 "REPLACE_ME"
+
+	living_standard_tec_assimilation_bionic_upgrade_hive:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_upgrade_hive_tooltip:0 "REPLACE_ME"
+	living_standard_tec_assimilation_bionic_upgrade_hive_tooltip_delayed:0 "REPLACE_ME"
 
 	living_standard_tec_assimilation_bionic_total:0 "REPLACE_ME"
 	living_standard_tec_assimilation_bionic_total_tooltip:0 "REPLACE_ME"
