Fixed assimilations + fixed main species swap

--- a/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R8_l_english.yml
@@ -1,6 +1,56 @@
 ﻿l_english:
 #R8 - ??? Patch
 
+# ------------------------------------------------- Civics
+# --------------- Regular
+	# Diet rogue servitors
+	civic_tec_artificial_servitors:0 "Artificial Servitors"
+	civic_tec_artificial_servitors_desc:0 "TO DO"
+	civic_tec_artificial_servitors_tooltip:0 "Starts the game with 15 robot pops and a rudimentary infrastructure to build them.\nOrganic pops can't be employed for menial or industrial jobs, and will become Unbound Creatives if unemployed.\nUnbound Creatives convert consumer goods into unity and boost the output and assembly speed of robotic units.\nMechanist origin: "
+
+	# Forces utopian, utopian affects employed pops too
+	civic_tec_utopian_post_scarcity:0 "Utopian Post-Scarcity"
+	civic_tec_utopian_post_scarcity_desc:0 "TO DO"
+	civic_tec_utopian_post_scarcity_tooltip:0 "Unlocks and amplifies the utopian living standards, making each pop provide the bonuses and upkeep without being unemployed.\n\nFactions will demand the utopian living standard for, at least, the empire main species."
+
+	# Remove trade, produce more unity
+	civic_tec_no_trade:0 "Philanthropic Frugality"
+	civic_tec_no_trade_desc:0 "More than on the need of wealth hoarding and market economies this society has promoted a no-trade system, where barter and altruistic exchanges are what truly drive growth and prosperity forward."
+	civic_tec_no_trade_tooltip:0 "Removes the ability of this country to produce trade and create or use trade-related elements; instead, clerks will produce extra unity and consumer goods, and each pop wil produce a small amount of unity based on its level of happiness.\nAllows the construction of Public Service buildings, which provide extra clerks and non usable country trade for improving the chance of potentially beneficial commercial pacts.\n"
+
+# --------------- Consume planets
+	civic_tec_regular_planet_harvesters:0 "Focused Harvesters"
+	civic_tec_regular_planet_harvesters_desc:0 "TO DO"
+	civic_tec_regular_planet_harvesters_tooltip:0 "Allows the creation of Harvester Colony ships, which are more costly and slower, but carry extra initial pops and provide instantaneous access to some districts and buildings.\nAllows the construction of Automated Planetary Harvesters micro-megastructures over habitable non artificial planets.\nPlanets colonized by harvester colony ships, via decision when obtained by other means, or slowly with automated harvesters, will be Harvested, obtaining incredible bonuses to production, immigration and planetary build speed, but will be exhausted over time to the point of needing a total climate restoration.\nThe capital of this empire will receive extra deposits when a harvested planet gains a level of exhaustion."
+
+	civic_tec_corporate_planet_harvesters:0 "Reclamation Corps"
+	civic_tec_corporate_planet_harvesters_desc:0 "TO DO"
+	civic_tec_corporate_planet_harvesters_tooltip:0 "Allows the creation of Harvester Colony ships, which are more costly and slower, but carry extra initial pops and provide instantaneous access to some districts and buildings.\nAllows the construction of Automated Planetary Harvesters micro-megastructures over habitable non artificial planets.\nPlanets colonized by harvester colony ships, via decision when obtained by other means, or slowly with automated harvesters, will be Harvested, obtaining incredible bonuses to production, immigration and planetary build speed, but will be exhausted over time to the point of needing a total climate restoration.\nThe capital of this empire will receive extra deposits when a harvested planet gains a level of exhaustion."
+
+	civic_tec_hive_planet_harvesters:0 "Driven Harvesters"
+	civic_tec_hive_planet_harvesters_desc:0 "TO DO"
+	civic_tec_hive_planet_harvesters_tooltip:0 "Allows the creation of Harvester Colony ships, which are more costly and slower, but carry extra initial pops and provide instantaneous access to some districts and buildings.\nAllows the construction of Automated Planetary Harvesters micro-megastructures over habitable non artificial planets.\nPlanets colonized by harvester colony ships, via decision when obtained by other means, or slowly with automated harvesters, will be Harvested, obtaining incredible bonuses to production, immigration and planetary build speed, but will be exhausted over time to the point of needing a total climate restoration.\nThe capital of this empire will receive extra deposits when a harvested planet gains a level of exhaustion."
+
+	civic_tec_machine_planet_harvesters:0 "Driven Harvesters"
+	civic_tec_machine_planet_harvesters_desc:0 "TO DO"
+	civic_tec_machine_planet_harvesters_tooltip:0 "Allows the creation of Harvester Colony ships, which are more costly and slower, but carry extra initial pops and provide instantaneous access to some districts and buildings.\nAllows the construction of Automated Planetary Harvesters micro-megastructures over habitable non artificial planets.\nPlanets colonized by harvester colony ships, via decision when obtained by other means, or slowly with automated harvesters, will be Harvested, obtaining incredible bonuses to production, immigration and planetary build speed, but will be exhausted over time to the point of needing a total climate restoration.\nThe capital of this empire will receive extra deposits when a harvested planet gains a level of exhaustion."
+
+	# Priest produce extra research
+	civic_tec_erudite_priests:0 "Erudite Piety"
+	civic_tec_erudite_priests_desc:0 "TO DO"
+	civic_tec_erudite_priests_tooltip:0 "TO DO"
+
+	civic_tec_erudite_priests:0 "Erudite Piety"
+	civic_tec_erudite_priests_desc:0 "TO DO"
+	civic_tec_erudite_priests_tooltip:0 "TO DO"
+
+	# Priest produce extra research
+	civic_tec_erudite_piety:0 "Erudite Piety"
+	civic_tec_erudite_piety_desc:0 "TO DO"
+	civic_tec_erudite_piety_tooltip:0 "TO DO"
+
+# /
+
 
 # Archaeotech
 	building_tec_archaeo_kohn_anchor:0 "Reality Anchor"
@@ -22,7 +72,7 @@
 	building_tec_archaeo_schzedani_bulwark:0 "Obsidian Bulwark"
 	building_tec_archaeo_schzedani_bulwark_desc:0 "TO DO."
 	building_tec_archaeo_schzedani_bulwark_effect:0 "TO DO"
-
+# /
 # Relics
 	r_tec_kohn_tesseract:0 "Kohn Tesseract"
 	r_tec_kohn_desc:0 "An undescribable artifact reflecting the collapse of infinite realities, both irradiating and consuming immense amounts of energy in an inert way. It's one of multiple tesseracts created by the Kohn Architects to traverse through potential realities, without leaving a trace of their existence."
