--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -156,6 +156,7 @@ empire_not_elitist_or_materialist:0 "$TRIGGER_FAIL$Our empire does not embrace e
  planet_criminals: "Criminals"
  planet_colonists: "Colonists"
  planet_tec_trade_drones: "Blockchain Drones"
+ planet_tec_labour_heroes: "Labour Heroes"
 
  mod_planet_jobs_latent_psionic_produces_mult:0 "§YLatent Psionic§! Pop Output"
  mod_planet_jobs_latent_psionic_upkeep_mult:0 "§YLatent Psionic§! Pop Upkeep"
