More scripted locs adjustments, fixes and refactored deposit buildings

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -416,8 +416,9 @@
  mod_building_crystal_mines_max:0 "Allows £building£ $building_crystal_mines$.\nMax £rare_crystals£ Rare Crystal Mining Jobs"
  mod_building_mote_harvesters_max:0 "Allows £building£ $building_mote_harvesters$.\nMax £volatile_motes£ Volatile Mote Trapping Jobs"
  mod_building_gas_extractors_max:0 "Allows £building£ $building_gas_extractors$.\nMax £exotic_gases£ Exotic Gas Extraction Jobs"
+ mod_building_betharian_power_plant_max:0 "Allows £building£ $building_betharian_power_plant$.\nMax £energy£ Technician Jobs"
 
-# BUILDINGS replaces
+# BUILDINGS replaces - TODO REMOVE
 # ------------------------------------------------------------
  building_tec_mote_harvesters:0 "$building_mote_harvesters$"
  building_tec_mote_harvesters_desc:0 "$building_mote_harvesters_desc$"
