--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3795,6 +3795,17 @@ tec_job_synapse_with_icon:0 "[GetSynapseIcon] [GetSynapse]"
 
 tec_job_synapse_plural_with_icon:0 "[GetSynapseIcon] [GetSynapsePlural]"
 
+tec_job_agri_drone_and_aqua_drone:0 "$job_agri_drone$ and £job_angler£ $job_tec_aqua_drone$"
+tec_job_agri_drones_and_aqua_drones:0 "$job_agri_drone_plural$ and £job_angler£ $job_tec_aqua_drone_plural$"
+
+tec_job_miner_and_reef_miner:0 "$job_miner$ and £tec_reef_drone£ $tec_reef_miner$"
+tec_job_miners_and_reef_miners:0 "$job_miner_plural$ and £tec_reef_drone£ $job_tec_reef_miner_plural$"
+
+tec_job_mining_drone_and_reef_drone:0 "$job_mining_drone$ and £tec_reef_drone£ $job_tec_reef_drone$"
+tec_job_mining_drones_and_reef_drones:0 "$job_mining_drone_plural$ and £tec_reef_drone£ $job_tec_reef_drone_plural$"
+
+tec_job_technician_drone_and_thermogenerator_drone:0 "$job_technician_drone$ and £tec_thermogenerator_drone£ $job_tec_thermogenerator_drone$"
+tec_job_technician_drones_and_thermogenerator_drones:0 "$job_technician_drone_plural$ and £tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$"
 
 # Eco cats
 leader_rulers:0 "Rulers"
